# OTIS-2025

./: .gitignore  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  classPID-members.html  classPID.html  classPID.js  class_p_i_d-members.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  lab3_8cpp.html  lab3_8cpp.js  model_8cpp.html  model_8cpp.js  model_8h.html  model_8h_source.html  navtreedata.js  navtreeindex0.js  pid_8cpp.html  pid_8h.html  pid_8h.js  pid_8h_source.html  sonar-project.properties  testlab3_8cpp.html  testlab3_8cpp.js
.github/workflows/: build.yml  check_duplication.yml  deploy-docs.yml  doxygen — ekadze.yml  doxygen.yml  duplicate-code.yml  ii02707_jekyll-gh-pages.yml  ii02724.yml  ii02815.yml  ii02823.yml  jekyll-2817.yml  jekyll-2818.yml  jekyll-gh-pages.yml  pages.yml
docs/: class_model__ruslan.html  class_model__ruslan.js  class_p_i_d__ruslan-members.html  class_p_i_d__ruslan.js  class_system_model.js  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  index.html  main__ruslan_8cpp.html  model__ruslan_8cpp_source.html  model__ruslan_8h_source.html  pid__ruslan_8cpp.html  pid__ruslan_8cpp__incl.map  pid__ruslan_8cpp__incl.md5  pid__ruslan_8cpp_source.html  pid__ruslan_8h.js  pid__ruslan_8h__dep__incl.md5  pid__ruslan_8h__incl.md5  pid__ruslan_8h_source.html  struct_linear_update-members.html  struct_linear_update.html  struct_linear_update.js  struct_nonlinear_update-members.html
docs/search/: all_5.js  all_7.js  all_a.js  all_b.js  classes_0.js  classes_3.js  classes_4.js  files_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  typedefs_1.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_8.js  variables_9.js
search/: all_0.js  all_2.js  all_3.js  all_4.js  classes_0.js  files_2.js  files_3.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
tasks/: readme.md
tasks/task_00/: readme.md
tasks/task_01/: readme.md
tasks/task_02/: readme.md
tasks/task_03/: readme.md
tasks/task_05/: readme.md
trunk/ii002713/task_02/src/: CMakeLists.txt  model.cpp  model.h  task_02.cpp
trunk/ii002713/task_03/: run.bat
trunk/ii002713/task_03/src/: CMakeLists.txt  main.cpp  model.cpp  model.h  pid.cpp  pid.h
trunk/ii002826/task_01/src/: CMakeLists.txt  main.cpp
trunk/ii002826/task_02/: README.md
trunk/ii002826/task_02/src/: CMakeLists.txt  main.cpp
trunk/ii002826/task_03/: Doxyfile
trunk/ii002826/task_03/src/: CMakeLists.txt  main.cpp  model.cpp  model.h  pid.cpp  pid.h
trunk/ii02701/task_02/: CMakeLists.txt
trunk/ii02701/task_02/doc/: README.md  index.html
trunk/ii02701/task_02/include/: model.hpp
trunk/ii02701/task_02/src/: CMakeLists.txt  main.cpp  model.cpp
trunk/ii02701/task_02/test/: CMakeLists.txt  test_model.cpp
trunk/ii02702/task_02/test/: CMakeLists.txt  build-and-run-project.bat  test.cpp
trunk/ii02702/task_03/test/: CMakeLists.txt  build-and-run-project.bat  test.cpp
trunk/ii02707/task_02/src/: CMakeLists.txt  main.cpp
trunk/ii02707/task_02/src/factory/: factorylinearmodel.h  factorynonlinearmodel.h  ifactorymodel.h
trunk/ii02707/task_02/src/model/: isimulatedmodel.h  linearmodel.h  nonlinearmodel.h
trunk/ii02707/task_02/test/: CMakeLists.txt  test.cpp
trunk/ii02707/task_03/: Doxyfile  build-and-run-projects.bat
trunk/ii02707/task_03/src/: CMakeLists.txt  adaptivecontroller.hpp  build-and-run-project.bat  main.cpp
trunk/ii02707/task_03/src/factory/: factorylinearmodel.hpp  factorynonlinearmodel.hpp  ifactorymodel.hpp
trunk/ii02707/task_03/src/model/: isimulatedmodel.hpp  linearmodel.hpp  nonlinearmodel.hpp
trunk/ii02707/task_03/src/regulator/: iregulator.hpp  pidregulator.hpp
trunk/ii02707/task_03/test/: CMakeLists.txt  build-and-run-project.bat  test.cpp
trunk/ii02708/task_03/test/: CMakeLists.txt  build-and-run-project.bat  test.cpp
trunk/ii02709/task_01/src/: CMakeLists.txt  lab1.cpp
trunk/ii02709/task_02/src/: CMakeLists.txt  lab2.cpp  lab2.h  main.cpp
trunk/ii02709/task_03/: Doxygen
trunk/ii02709/task_03/src/: CMakeLists.txt  main.cpp  pid.cpp  pid.h  plant.cpp  plant.h
trunk/ii02709/task_03/test/: CMakeLists.txt  test_pid.cpp
trunk/ii02709/task_04/: readme.md
trunk/ii02712/task_03/test/: CMakeLists.txt  build.sh  test.cpp
trunk/ii02717/task_02/src/: CMakeLists.txt  main.cpp  module.cpp  module.h
trunk/ii02719/task_03/src/: CMakeLists.txt  main.cpp  module.cpp  module.h  sript.bat
trunk/ii02720/task_02/test/: CMakeLists.txt  test.cpp
trunk/ii02721/task_01/src/: CMakeLists.txt  main  main.cpp
trunk/ii02724/task_03/test/: CMakeLists.txt  test.cpp
trunk/ii02726/task_01/src/: CMakeLists.txt  otis_task_01.cpp
trunk/ii02726/task_02/src/: CMakeLists.txt  otis_task_02.cpp  test.cpp  test.h
trunk/ii02726/task_03/src/: CMakeLists.txt  main.cpp  pid.cpp  pid.h  plant.cpp  plant.h  sim.cpp  sim.h
trunk/ii02801/task_02/src/: CMakeLists.txt  functions.cpp  functions.h
trunk/ii02801/task_03/: Doxyfile  api.md
trunk/ii02804/task_02/: .gitignore
trunk/ii02804/task_02/src/: CMakeLists.txt  task_01.cpp  task_01.h
trunk/ii02804/task_03/: .gitignore  Doxyfile
trunk/ii02808/task_03/: Doxyfile
trunk/ii02810/task_03/: Doxyfile
trunk/ii02812/task_03/: .gitignore  Doxyfile
trunk/ii02817/task_03/: Doxyfile
trunk/ii02819/task_02/: CMakeLists.txt
trunk/ii02819/task_02/doc/: readme.md
trunk/ii02819/task_02/src/: CMakeLists.txt  main.cpp  models.cpp  models.h
trunk/ii02819/task_02/test/: test_models.cpp
trunk/ii02825/task_02/: CMakeLists.txt
trunk/ii02825/task_02/doc/: Readme.md
trunk/ii02825/task_02/src/: CMakeLists.txt  functions.cpp  functions.h  main_program.cpp  СMakeLists.txt
trunk/ii02825/task_02/test/: test.cpp
(+782 files in other folders)
